# OpenGL_projet

./: CMakeLists.txt  README.md  main.cc
include/: App.hh  FireRenderer.hh  TriangleRenderer.hh  Vec.hh
src/: App.cc  FireRenderer.cc  TriangleRenderer.cc  fragment.glsl  vertex.glsl
